--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@
   }
   
   button {
-    background: radial-gradient(circle, rgba(240,230,140,1) 0%, rgba(187,96,33,0.9542191876750701) 100%);
+    background: #fff;
     border-radius: 8px;
     color: #4b35ae;
     cursor: pointer;
@@ -60,9 +60,12 @@
     flex: 0 auto;
     padding: 8px;
     margin-top: 50px;
-    background-color: rgb(55, 24, 141);
+    background-color:#fff(55, 24, 141);
     border-radius: 8px;
+    color: rgb(55, 24, 141);
+    font-size: 16px;
   }
+
 .hide {
     display: none;
 }
@@ -75,28 +78,16 @@
     height: 400px;
   }
   
-  .card {
-    background: radial-gradient(circle, rgba(240,230,140,1) 0%, rgba(187,124,33,0.604079131652661) 100%);
-    border: 1px solid #eceff1;
-    border-radius: 8px;
-    box-shadow: rgba(60, 64, 67, 2) 0 1px 2px 0,
-      rgba(60, 64, 67, 0.15) 0 2px 4px 3px;
-    margin: auto;
-    padding: 20px;
-  }
-  
-  
   .large-font {
-    font-size: 3.5em;
-    text-align:center;
+    font-size: 3.5em
   }
   
   .timer {
-    height: 240px;
+    height: 100px;
     padding: 10px;
     background:  rgb(55, 24, 141);
     color: #fff;
-    text-align: center;
+    text-align: right;
   }
   
   .timer-text {
@@ -108,13 +99,15 @@
       flex-direction: column;
     }
   
-    .word-guess,
+    .questions,
     .results {
       width: 90vw;
     }
   
-    section {
+    section, .questions {
       background-color: white;
+      color: rgb(55, 24, 141);
+      font-size: 16px;
       margin: 20px auto;
       width: 92vw;
     }
